--- a/aboutUs.html
+++ b/aboutUs.html
@@ -97,7 +97,7 @@
 				<h3>Began: Spring, 2012</h3>
 				<i class="fas fa-chevron-down arrow_one"></i>
 			</div>
-			<div class="collapsible_1_content">
+			<div class="collapsible_1_content" id="col_1_event">
 				<p>
 					Here's an overview of what happened over a few weekends in the Spring of 2012 when TRAA members and personnel from the Upper Thames River Conservation Authority (UTRCA) waded in for Year 3 of our 5-year Salmonid Tagging and Monitoring Program.<br>
 					<br>Jon George, an MNR biologist from Thunder Bay who is helping us out with this project, compiled the comparative results of 2010 (Year 1) and 2011 (Year 2) and 2012 (Year 3) in an easy-to-understand report.<br>
