--- a/getInvolved.html
+++ b/getInvolved.html
@@ -118,60 +118,78 @@
 				<i class="fas fa-chevron-down arrow_one"></i>
 			</div>
 
-			<div class="collapsible_1_content ">
+			<div class="collapsible_1_content" id="col_links_mar">
 				<!-- conservation links -->
 				<div>
 					<h3 id="links_col_titles" class="firstChild_links">CONSERVATION</h3>
 					<div class="section_division"></div>
-					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	          quis nostrud exercitation ullamco laboris.
-					</p>
+					<div id="col_1_conservation">
+						<a href="https://caroliniancanada.ca/" target="_blank">Carolinian Canada</a>
+						<a href="http://thamesrivercleanup.ca/default.htm" target="_blank">Thames River Cleanup</a>
+						<a href="http://www.naturelondon.com/" target="_blank">Nature London</a>
+						<a href="https://northshoresteelhead.com/" target="_blank">North Shore Steelhead Association</a>
+						<a href="https://www.ontariostreams.on.ca/" target="_blank">Ontario Streams</a>
+						<a href="https://www.ofah.org/" target="_blank">Ontario Federation of Anglers and Hunters</a>
+						<a href="https://tucanada.org/" target="_blank">Trout Unlimited Canada</a>
+					</div>
 				</div>
 
 				<!-- conservation authorities links -->
 				<div>
 					<h3 id="links_col_titles">CONSERVATION AUTHORITIES</h3>
 					<div class="section_division"></div>
-					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	          quis nostrud exercitation ullamco laboris.
-					</p>
+					<div id="col_1_authorities">
+						<a href="http://www.abca.on.ca/" target="_blank">Ausable Bayfield Conservation Authority</a>
+						<a href="http://www.creditvalleycons.com/" target="_blank">Credit Valley Conservation Authority</a>
+						<a href="http://www.erca.org/" target="_blank">Essex Region Conservation Authority</a>
+						<a href="https://www.grandriver.ca/en/index.aspx" target="_blank">Grand River Conservation Authority</a>
+						<a href="https://www.conservationhalton.ca/" target="_blank">Halton Region Conservation Authority</a>
+						<a href="http://www.conservationhamilton.ca/" target="_blank">Hamilton Region Conservation Authority</a>
+						<a href="http://www.lprca.on.ca/" target="_blank">Long Point Region Conservation Authority</a>
+						<a href="http://www.lakeheadca.com/" target="_blank">Lakehead Region Conservation Authority</a>
+						<a href="http://www.lowerthames-conservation.on.ca/" target="_blank">Lower Thames Valley Conservation Authority</a>
+						<a href="https://trca.ca/?src=trca.on.ca" target="_blank">Metro Toronto & Region Conservation Authority</a>
+						<a href="http://www.rvca.ca/" target="_blank">Rideau Valley Conservation Authority</a>
+						<a href="http://www.scrca.on.ca/" target="_blank">St.Clair Region Conservation Authority</a>
+						<a href="http://www.thamesriver.on.ca/" target="_blank">Upper Thames River Conservation Authority</a>
+					</div>
 				</div>
 
 				<!-- Government agencies links -->
 				<div>
 					<h3 id="links_col_titles">GOVERNMENT AGENCIES</h3>
 					<div class="section_division"></div>
-					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	          quis nostrud exercitation ullamco laboris.
-					</p>
+					<div id="col_1_government">
+						<a href="https://www.ontario.ca/page/ministry-natural-resources-and-forestry" target="_blank">Ontario Ministry of Natural Resources</a>
+						<a href="https://www.ontario.ca/page/ministry-environment-conservation-parks" target="_blank">Ontario Ministry of the Environment</a>
+					</div>
 				</div>
 
 				<!-- Local fishing retailers links -->
 				<div>
 					<h3 id="links_col_titles">LOCAL FISHING RETAILERS</h3>
 					<div class="section_division"></div>
-					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	          quis nostrud exercitation ullamco laboris.
-					</p>
+					<div id="col_1_retailers">
+						<a href="https://anglingsports.ca/index.html" target="_blank">Angling Sports</a>
+						<a href="https://www.freewebs.com/johnsflymaterials/" target="_blank">John's Fly Materials</a>
+						<a href="https://www.facebook.com/AnglingOutfitters/" target="_blank">Angling Outfitters</a>
+					</div>
 				</div>
 
 				<!-- Fishing and related links -->
 				<div>
 					<h3 id="links_col_titles">FISHING & RELATED LINKS</h3>
 					<div class="section_division"></div>
-					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	          quis nostrud exercitation ullamco laboris.
-					</p>
+					<div id="col_1_fishing">
+						<a href="http://www3.sympatico.ca/ianjames/" target="_blank">Ian Colin James</a>
+						<a href="http://www.wofgpa.org/" target="_blank">Western Ontario Association</a>
+						<a href="http://www.fcfc.ca/index.html" target="_blank">Forest City Fly Fishing Club </a>
+						<a href="http://forestcitybassmasters.com/" target="_blank">Forest City Bassmasters</a>
+						<a href="https://wateroffice.ec.gc.ca/google_map/google_map_e.html" target="_blank">Real-Time Hydrometric Data</a>
+						<a href="http://www.matchanglingclub.com/" target="_blank">Match Angling Club of Ontario </a>
+						<a href="https://sffcl.com/" target="_blank">SOTTO Fly Fishing Club</a>
+						<a href="https://thamesriverpaddlingroutes.webs.com/" target="_blank">Thames River Paddling Routes</a>
+					</div>
 				</div>
 
 			</div>
@@ -256,7 +274,7 @@
 				<img src="images/created_icons_back_to_top.svg" alt="back to top icon">
 			</a>
 		</div>
-		
+
     <!-- footer copyrights -->
     <div id="copyrights">
       <h3>© Marin-Riddick Enterprises</h3>
