--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 			<div class="section_division"></div>
 			<div class="about_flex">
 				<div id="about_image"></div>
-				<div id="about_content">
+				<div id="about_content" class="index_about_1">
 					<p>
 						The TRAA works at a grassroots level within the Thames River watershed to:
 						<ul id="con_list">
@@ -103,7 +103,7 @@
 		<section>
 			<h2 class="hidden">Events Section</h2>
 			<h2 id="events_title">UPCOMING EVENTS</h2>
-			<div class="section_division"></div>
+			<div class="section_division" id="carousel_division"></div>
 
 			<!-- Events carousel -->
 				<section id="carousel_controls"> <!-- Carousel controls -->
