--- a/newsletters.html
+++ b/newsletters.html
@@ -78,7 +78,7 @@
       <h2 class="hidden">Explor our library</h2>
       <h2 id="about_title">EXPLOR OUR LIBRARY</h2>
 			<div class="section_division"></div>
-			<div id="involved_content">
+			<div id="news_content">
 				<p>
 					The first newsletters were banged out manually on a typewriter and then copied about 100 times for distribution. These initial efforts were simple (no pictures or colour!) but they did the job. The latest versions are electronic, emailed to members and other TRAA friends. They feature nice formatting, pictures and yes, colour!<br>
 					<br>The greatest challenge over the years has been getting editions published on time (or at all!). Such is life within a volunteer organization like the TRAA; you have to focus your energies on where they are most effective and a newsletter falls further down that priority list.
