adding carousel content

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -136,7 +136,7 @@
 					The picture above show the box in its "raw" form on the shop floor at H.B. Beal Secondary School. It was constructed of marine plywood and ingeniously fastened together for strength.<br>
 					<br>In the summer of 2013 TRAA members trucked it out to the hatchery site and wrestled it down the several flights of stairs to the enclosure. It was then painted and assembled, fitted with its plumbing and drains, caulked and tested then caulked again.
 				</p>
-				<img src="images/about-project_2-img4.jpg" alt="New upwelling box as it sits in its first year of service.">
+				<img id="cont_small_img" src="images/about-project_2-img4.jpg" alt="New upwelling box as it sits in its first year of service.">
 				<p>
 					This is the new upwelling box as it sits in its first year of service. There are six cells, each completely segregated from the rest. This will allow us to incubate one, two or even three species of trout at once!<br>
 					<br>The two panels at the back with the single handles are hinged to be easily swung up so that the egg trays can be maintained. Once the eggs hatch the trays are removed and the fry begin consuming their egg sacs. Once they've used up their egg sacs they begin to move around actively. This is called the "swim-up" stage and they drift into the front array of their cells. The top panels with the double handles lift right off for access to the front array of the cells where the newly hatched fry will end up once they've reached the "swim-up" stage.<br>
