--- a/index.html
+++ b/index.html
@@ -115,11 +115,11 @@
 				<section id="carousel_container">
 					<h2 class="hidden">Events carousel</h2>
 				<div id="carousel_images" style="right: 0">
-					<img src="images/become_a_member.png" alt="T.R.A.A. volunteers working">
-					<img src="images/get_involved-memberships_info.png" alt="T.R.A.A. volunteer holding a trout">
-					<img src="images/projects-project_1-top.jpg" alt="Trout being measured">
-					<img src="images/projects-project_3.JPG" alt="T.R.A.A. searching for samples">
-					<img src="images/projects-project_2.jpg" alt="T.R.A.A. volunteers measuring a trout">
+					<img src="images/carousel_1.jpg" alt="T.R.A.A. volunteers working">
+					<img src="images/carousel_2.jpg" alt="T.R.A.A. volunteer holding a trout">
+					<img src="images/carousel_3.jpg" alt="Trout being measured">
+					<img src="images/carousel_4.jpg" alt="T.R.A.A. searching for samples">
+					<img src="images/carousel_5.jpg" alt="T.R.A.A. volunteers measuring a trout">
 				</div>
 			</section>
 
