minor errors + favicon

--- a/getInvolved.html
+++ b/getInvolved.html
@@ -16,7 +16,7 @@
 	<link rel="stylesheet" href="css/main.css">
 
 	<!-- favicon -->
-	<!-- <link rel="shortcut icon" type="image/png" href="images/traa_favicon.png"/> -->
+	<link rel="shortcut icon" type="image/png" href="images/traa_favicon.png"/>
 
 	<title>Thames River Anglers Assosiation</title>
 </head>
@@ -76,7 +76,7 @@
     <!-- How to get involved section -->
     <section>
       <h2 class="hidden">How to get involved</h2>
-      <h2 id="about_title">HOW TO GET INVOLVED</h2>
+      <h2 class="about_title">HOW TO GET INVOLVED</h2>
       <div class="section_division"></div>
 			<div class="involved_flex">
 				<div id="involved_image"></div>
@@ -85,7 +85,7 @@
 						This is the best membership deal you can buy! Some people have a hard time paying to volunteer. Well if that's you, just give us $25.00 every year and we won't bug you - much. You'll get a card that says you’re a TRAA member and you'll get periodic updates on what you're missing out on.<br>
 						<br>Participate, help out, have fun and give a little bit back to the Thames River watershed! Not only does $25.00 get you in good standing as a TRAA member, it also includes everyone in your immediate family!
 	        </p>
-	        <button>READ MORE</button>
+	        <button onclick="window.location.href = 'projects.html';">READ MORE</button>
 	      </div>
 			</div>
 
@@ -94,7 +94,7 @@
     <!-- Merchandise section -->
     <section>
       <h2 class="hidden">Merchandise section</h2>
-      <h2 id="about_title">MERCHANDISE</h2>
+      <h2 class="about_title">MERCHANDISE</h2>
       <div class="section_division"></div>
 			<div class="merch_flex">
 				<div id="merchandise_image"></div>
@@ -103,7 +103,7 @@
 						Many of you have already ordered the TRAA tee shirts, but if you haven't you had better hurry because many sizes are almost sold out! These are a steal at $15 each. There are three different hat colours available: Clay Grey, Burnt Orange and Taupe. If you thought the tee's were a good deal, all three editions of these hats are also priced at $15 each.<br>
 						<br>We now have some nice stickers featuring the TRAA logo that you can display on your vehicle, boat, lunchbox or wherever you like. These are $2 each but you get one for joining the TRAA as a member or renewing an existing TRAA membership. Get your TRAA Gear (makes a great Christmas gift!) at any TRAA event, such as this coming General Meeting.
 	        </p>
-	        <button>READ MORE</button>
+	        <button onclick="window.location.href = 'projects.html';">READ MORE</button>
 	      </div>
 			</div>
     </section>
@@ -121,7 +121,7 @@
 			<div class="collapsible_1_content" id="col_links_mar">
 				<!-- conservation links -->
 				<div>
-					<h3 id="links_col_titles" class="firstChild_links">CONSERVATION</h3>
+					<h3 class="links_col_titles firstChild_links">CONSERVATION</h3>
 					<div class="section_division"></div>
 					<div id="col_1_conservation">
 						<a href="https://caroliniancanada.ca/" target="_blank">Carolinian Canada</a>
@@ -136,7 +136,7 @@
 
 				<!-- conservation authorities links -->
 				<div>
-					<h3 id="links_col_titles">CONSERVATION AUTHORITIES</h3>
+					<h3 class="links_col_titles">CONSERVATION AUTHORITIES</h3>
 					<div class="section_division"></div>
 					<div id="col_1_authorities">
 						<a href="http://www.abca.on.ca/" target="_blank">Ausable Bayfield Conservation Authority</a>
@@ -157,7 +157,7 @@
 
 				<!-- Government agencies links -->
 				<div>
-					<h3 id="links_col_titles">GOVERNMENT AGENCIES</h3>
+					<h3 class="links_col_titles">GOVERNMENT AGENCIES</h3>
 					<div class="section_division"></div>
 					<div id="col_1_government">
 						<a href="https://www.ontario.ca/page/ministry-natural-resources-and-forestry" target="_blank">Ontario Ministry of Natural Resources</a>
@@ -167,7 +167,7 @@
 
 				<!-- Local fishing retailers links -->
 				<div>
-					<h3 id="links_col_titles">LOCAL FISHING RETAILERS</h3>
+					<h3 class="links_col_titles">LOCAL FISHING RETAILERS</h3>
 					<div class="section_division"></div>
 					<div id="col_1_retailers">
 						<a href="https://anglingsports.ca/index.html" target="_blank">Angling Sports</a>
@@ -178,7 +178,7 @@
 
 				<!-- Fishing and related links -->
 				<div>
-					<h3 id="links_col_titles">FISHING & RELATED LINKS</h3>
+					<h3 class="links_col_titles">FISHING & RELATED LINKS</h3>
 					<div class="section_division"></div>
 					<div id="col_1_fishing">
 						<a href="http://www3.sympatico.ca/ianjames/" target="_blank">Ian Colin James</a>
