--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<link rel="stylesheet" href="css/main.css">
 
 	<!-- favicon -->
-	<!-- <link rel="shortcut icon" type="image/png" href="images/traa_favicon.png"/> -->
+	<link rel="shortcut icon" type="image/png" href="images/traa_favicon.png"/>
 
 	<title>Thames River Anglers Assosiation</title>
 </head>
@@ -77,13 +77,14 @@
 	<!-- About section -->
 		<section id="about_section">
 			<h2 class="hidden">About the T.R.A.A.</h2>
-			<h2 id="about_title">ABOUT THE T.R.A.A.</h2>
+			<h2 class="about_title">ABOUT THE T.R.A.A.</h2>
 			<div class="section_division"></div>
 			<div class="about_flex">
 				<div id="about_image"></div>
 				<div id="about_content" class="index_about_1">
 					<p>
 						The TRAA works at a grassroots level within the Thames River watershed to:
+					</p>
 						<ul id="con_list">
 							<li>protect, enhance and regenerate a viable, multi-species, year-round fishery.</li>
 							<li>promote and participate in environmental clean-up, pollution control and rehabilitation.</li>
@@ -92,8 +93,8 @@
 							<li>form partnerships with community businesses, government agencies, special interest groups, landowners, and other stakeholders in the Thames River watershed.</li>
 							<li>increase public awareness of the unique diversity of the Thames River watershed, it’s challenges, it’s recreational opportunities and it’s vital importance to our community.</li>
 						</ul>
-					</p>
-					<button>READ MORE</button>
+
+					<button onclick="window.location.href = 'aboutUs.html';">READ MORE</button>
 				</div>
 			</div>
 
@@ -137,7 +138,7 @@
 						Join our family for a whole year for only $25! Your membership also adds another voice to our efforts in protecting and enhancing aquatic habitats in the London & area community. You’ve taken a lot of enjoyment from this unique fishery. It’s time to give back by being part of the solution!<br>
 						<br>Efforts are also underway to get money to continue and improve many of the TRAA’s most vital projects. This will include improvements to the TRAA Trout Hatchery and continuation of the Salmonid Monitoring Program.
 					</p>
-					<button>READ MORE</button>
+					<button onclick="window.location.href = 'getInvolved.html';">READ MORE</button>
 				</div>
 			</div>
 		</section>
