--- a/newsletters.html
+++ b/newsletters.html
@@ -16,7 +16,7 @@
 	<link rel="stylesheet" href="css/main.css">
 
 	<!-- favicon -->
-	<!-- <link rel="shortcut icon" type="image/png" href="images/traa_favicon.png"/> -->
+	<link rel="shortcut icon" type="image/png" href="images/traa_favicon.png"/>
 
 	<title>Thames River Anglers Assosiation</title>
 </head>
@@ -76,7 +76,7 @@
     <!-- newsletter library section -->
     <section>
       <h2 class="hidden">Explor our library</h2>
-      <h2 id="about_title">EXPLOR OUR LIBRARY</h2>
+      <h2 class="about_title">EXPLOR OUR LIBRARY</h2>
 			<div class="section_division"></div>
 			<div id="news_content">
 				<p>
@@ -103,13 +103,13 @@
     <!-- add more section -->
     <section>
       <h2 class="hidden">What did we miss?</h2>
-      <h2 id="about_title">WHAT DID WE MISS?</h2>
+      <h2 class="about_title">WHAT DID WE MISS?</h2>
       <div class="section_division"></div>
       <div id="add_content">
         <p>
 					If you have copies of TRAA newsletters that you don't see listed below, please forward a copy to us by email or bring it to any TRAA event!
 				</p>
-				<button>CONTACT US</button>
+				<button onclick="window.location.href = 'contactUs.html';">CONTACT US</button>
       </div>
     </section>
   </main>
