--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,7 @@
 	<link rel="stylesheet" href="css/main.css">
 
 	<!-- favicon -->
-	<!-- <link rel="shortcut icon" type="image/png" href="images/traa_favicon.png"/> -->
+	<link rel="shortcut icon" type="image/png" href="images/traa_favicon.png"/>
 
 	<title>Thames River Anglers Assosiation</title>
 </head>
@@ -94,7 +94,7 @@
 				<i class="fas fa-chevron-down arrow_one"></i>
 			</div>
 			<div class="collapsible_1_content">
-				<img id="col_proj_img_1" src="images/projects-project1-img1.jpg" alt="TRAA's Paddle and fish event">
+				<img class="col_proj_img_1" src="images/projects-project1-img1.jpg" alt="TRAA's Paddle and fish event">
 				<p>
 					This year's TRAA Paddle & Fish took place on July 13th and we had around a dozen participants from the TRAA, the Forest City Flyfishers and the Western Ontario Fish & Game Protective Association.<br>
 					<br>It was a beautiful day with the thunderstorms holding off for our after-paddle BBQ. This year's route took us from Elgin Road 73, through the town of Dorchester to the Lion's Park just west of town.<br>
@@ -124,7 +124,7 @@
 			</div>
 			<div class="collapsible_2_content">
 				<a  href="https://www.youtube.com/watch?v=B-Z8E_1-_GU" target="_blank">
-					<img id="col_proj_img_1" src="images/projects-project2-video.jpg" alt="Rainbow trout release video.">
+					<img class="col_proj_img_1" src="images/projects-project2-video.jpg" alt="Rainbow trout release video.">
 				</a>
 				<p>
 					We have had a very successful hatch of rainbow trout this year with minimal die-off. However, it was time to say goodbye and turn them loose into their new homes. The donor stream was Dingman Creek.<br>
@@ -140,7 +140,7 @@
 			<i class="fas fa-chevron-down arrow_three"></i>
 		</div>
 		<div class="collapsible_3_content">
-			<img id="col_proj_img_1" src="images/projects-project3-img1.jpg" alt="Dad teaching his son how to use a fishing rod.">
+			<img class="col_proj_img_1" src="images/projects-project3-img1.jpg" alt="Dad teaching his son how to use a fishing rod.">
 			<p>
 				The TRAA took part in the "Public Night" portion of the event, Thursday, May 16 from 5:00pm to 8:00pm.<br>
 				The kids cast at fish targets that we had set up and it was much fun for us as it was for the kids!<br>
@@ -161,7 +161,7 @@
 		</div>
 		<div class="collapsible_4_content">
 			<a  href="https://www.youtube.com/watch?v=pl0FUUaXDks&t=2s" target="_blank">
-				<img id="col_proj_img_1" class="col_proj_img_4" src="images/projects-project4-video.jpg" alt="Brown trout release video.">
+				<img class="col_proj_img_1 col_proj_img_4" src="images/projects-project4-video.jpg" alt="Brown trout release video.">
 			</a>
 			<p>
 				The brown trout were transferred from the TRAA hatchery and released at the same site on Medway Creek as in previous years.  TRAA members loaded up the trout fry into the transfer tank at the hatchery site. We then proceeded to the release site north of London, Ontario.<br>
