--- a/aboutUs.html
+++ b/aboutUs.html
@@ -16,7 +16,7 @@
 	<link rel="stylesheet" href="css/main.css">
 
 	<!-- favicon -->
-	<!-- <link rel="shortcut icon" type="image/png" href="images/traa_favicon.png"/> -->
+	<link rel="shortcut icon" type="image/png" href="images/traa_favicon.png"/>
 
 	<title>Thames River Anglers Assosiation</title>
 </head>
@@ -78,7 +78,7 @@
     <!-- About intro -->
     <section>
       <h2 class="hidden">About the T.R.A.A.</h2>
-      <h2 id="about_title">WHO IS THE T.R.A.A.</h2>
+      <h2 class="about_title">WHO IS THE T.R.A.A.</h2>
       <div class="section_division"></div>
       <div id="about_content" class="about_content_desktop">
         <p>
@@ -152,7 +152,7 @@
     <!-- Become a member section -->
     <section>
       <h2 class="hidden">Become a member!</h2>
-      <h2 id="about_title">BECOME A MEMBER TODAY</h2>
+      <h2 class="about_title">BECOME A MEMBER TODAY</h2>
       <div class="section_division"></div>
 			<div class="about_member_flex">
 				<div id="become_image"></div>
@@ -161,7 +161,7 @@
 						Join our family for a whole year for only $25! Your membership also adds another voice to our efforts in protecting and enhancing aquatic habitats in the London & area community. You’ve taken a lot of enjoyment from this unique fishery. It’s time to give back by being part of the solution!<br>
 						<br>Efforts are also underway to get money to continue and improve many of the TRAA’s most vital projects. This will include improvements to the TRAA Trout Hatchery and continuation of the Salmonid Monitoring Program.
 	        </p>
-	        <button>READ MORE</button>
+	        <button onclick="window.location.href = 'getInvolved.html';">READ MORE</button>
 	      </div>
 			</div>
     </section>
