--- a/contactUs.html
+++ b/contactUs.html
@@ -16,7 +16,7 @@
 	<link rel="stylesheet" href="css/main.css">
 
 	<!-- favicon -->
-	<!-- <link rel="shortcut icon" type="image/png" href="images/traa_favicon.png"/> -->
+	<link rel="shortcut icon" type="image/png" href="images/traa_favicon.png"/>
 
 	<title>Thames River Anglers Assosiation</title>
 </head>
