--- a/getInvolved.html
+++ b/getInvolved.html
@@ -79,7 +79,9 @@
       <h2 class="about_title">HOW TO GET INVOLVED</h2>
       <div class="section_division"></div>
 			<div class="involved_flex">
-				<div id="involved_image"></div>
+				<div>
+					<video id="involved_video" src="video/become_a_member_animation.mp4" poster="TRAA become a member animation" width="480" autoplay controls></video>
+				</div>
 	      <div id="involved_content">
 	        <p>
 						This is the best membership deal you can buy! Some people have a hard time paying to volunteer. Well if that's you, just give us $25.00 every year and we won't bug you - much. You'll get a card that says you’re a TRAA member and you'll get periodic updates on what you're missing out on.<br>
