--- a/getInvolved.html
+++ b/getInvolved.html
@@ -80,7 +80,7 @@
       <div class="section_division"></div>
 			<div class="involved_flex">
 				<div>
-					<video id="involved_video" src="video/become_a_member_animation.mp4" poster="TRAA become a member animation" width="480" autoplay controls></video>
+					<video id="involved_video" src="video/become_a_member_animation.mp4" width="480" autoplay controls></video>
 				</div>
 	      <div id="involved_content">
 	        <p>
